--- a/Web.config
+++ b/Web.config
@@ -32,9 +32,14 @@
   <add key="ITMAN.query" value="http://stjnapp03/itman-new/webservice/query.asmx"/>
   </appSettings>
   <connectionStrings>
-    <add name="batchConnectionString1" connectionString="Data Source=STJNAPP03;Initial Catalog=batch;User ID=sa;Password=Titpfa!123" providerName="System.Data.SqlClient"/>
-    <add name="batchConnectionString" connectionString="Data Source=STJNAPP03;Initial Catalog=batch;User ID=sa;Password=Titpfa!123" providerName="System.Data.SqlClient"/>
-    <add name="batchConnectionString2" connectionString="Data Source=STJNAPP03;Initial Catalog=batch;User ID=sa;Password=Titpfa!123" providerName="System.Data.SqlClient"/>
+    <add name="batchConnectionString1" connectionString="Data Source=STJNAPP03;Initial Catalog=batch;User ID=sa;Password=Titpfa!123"
+      providerName="System.Data.SqlClient" />
+    <add name="batchConnectionString" connectionString="Data Source=STJNAPP03;Initial Catalog=batch;User ID=sa;Password=Titpfa!123"
+      providerName="System.Data.SqlClient" />
+    <add name="batchConnectionString2" connectionString="Data Source=STJNAPP03;Initial Catalog=batch;User ID=sa;Password=Titpfa!123"
+      providerName="System.Data.SqlClient" />
+    <add name="batchConnectionString3" connectionString="Data Source=stjnapp03;Initial Catalog=batch;Persist Security Info=True;User ID=sa"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <customErrors mode="Off"/>
